@@ -9,6 +9,7 @@ import com.crduels.domain.model.TipoTransaccion;
 import com.crduels.domain.model.Usuario;
 import com.crduels.infrastructure.repository.UsuarioRepository;
 import com.crduels.infrastructure.repository.TransaccionRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
@@ -17,19 +18,12 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class TransaccionService {
 
     private final TransaccionRepository transaccionRepository;
     private final TransaccionMapper transaccionMapper;
     private final UsuarioRepository usuarioRepository;
-
-    public TransaccionService(TransaccionRepository transaccionRepository,
-                              TransaccionMapper transaccionMapper,
-                              UsuarioRepository usuarioRepository) {
-        this.transaccionRepository = transaccionRepository;
-        this.transaccionMapper = transaccionMapper;
-        this.usuarioRepository = usuarioRepository;
-    }
 
     public TransaccionResponseDto registrarTransaccion(TransaccionRequestDto dto) {
         Transaccion transaccion = transaccionMapper.toEntity(dto);
@@ -39,10 +33,10 @@ public class TransaccionService {
         return transaccionMapper.toDto(saved);
     }
 
-    public List<TransaccionResponseDto> listarPorUsuario(Long usuarioId) {
+    public List<TransaccionResponseDto> listarPorUsuario(String usuarioId) {
         return transaccionRepository.findByUsuario_Id(usuarioId).stream()
                 .map(transaccionMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public TransaccionResponseDto cambiarEstado(UUID transaccionId, EstadoTransaccion estado) {
